void using YouTube API for Spotify redirection when out of quota